# app_llmsat

./: .env.example  .gitignore  =1.2  PLAN_ET_LAYERS.md  PLAN_GRADIO_MODAL.md  PROJECT_MAP.md  README.md  app.py  cli.py  config_manager.py  downloader.py  open_buildings.py  osm_roads.py  pyproject.toml  requirements.txt  segmenter.py  vectorizer.py
.claude/: settings.json
datasets/dataset_20260328_1232/: metadata.json
datasets/dataset_20260328_1232/annotations/: train.json  val.json
datasets/dataset_20260328_1724/: metadata.json
datasets/dataset_20260328_1724/annotations/: train.json  val.json
nl_query/: __init__.py  openai_handler.py
old_files/: fixesri_export_tif.py  grok_gee_sam_copernicusv1.py  grok_gee_sam_copernicusv2.py  grok_layers_sam.py  grok_sam_test.py  log_wr_test.py  run_downloader.py  samgeo_color_filter.py  samgeo_color_filter_rnages.py  samgeo_test.py  samgeo_utils.py  samgeo_vector_overlay.py  semantic_samgeo_test.py  v2_geo_sam_layers.py
pipeline/: __init__.py  annotator.py  config.py  dataset_builder.py  geodetector.py  pipeline.py  rfdetector.py  trainer.py
samgeo/: __init__.py  text_sam.py
samgeo_stub/: __init__.py  text_sam.py
scripts/: setup_venv.bat  setup_venv.sh
tests/: conftest.py  test_config.py  test_cuda_sam2.py  test_downloader.py  test_nl_query.py  test_pipeline.py  test_segmenter.py  test_vectorizer.py
tests/stubs/samgeo/: __init__.py  common.py
tools/: gpu_smoke_test.py  test_auto_sam.py
